# playground

./: Cargo.toml  README.md
advtm/: Cargo.toml  README.md  example.env
advtm/src/: main.rs
advtm/src/api/: handlers.rs  mod.rs  requests.rs  server.rs  worker.rs
advtm/src/api/server/: handlers.rs  init.rs  mod.rs
advtm/src/client/: telegram.rs
advtm/src/db/: sqlite.rs
advtm/src/db/sqlite/: client.rs  schema.rs
advtm/src/service/: levada.rs  mod.rs  usd_rate.rs
advtm/src/service/home/: levada.rs  mod.rs
advtm/src/service/rate/: banki.rs  mod.rs  rate.rs  tinkoff.rs
advtm/src/telegram/: mod.rs
read4me/: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  example.env
read4me/rpc/proto/yandex-cloud/: tts.proto
read4me/src/: db.rs  http.rs  main.rs  rpc.rs  tg.rs
read4me/templates/: index.html  sentences.html
sub4usd/: Cargo.toml  Cross.toml  README.md  example.env
sub4usd/src/: exchange.rs  main.rs
