[package]
name = "advtm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["json"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
sea-query = { version = "0.30.1", default-features = false, features = ["derive", "backend-sqlite"] }
sea-query-rusqlite = "0.4.0"
scraper = "0.18.1"
frankenstein = { version = "0.30.1", optional = true, default-features = false, features = ["async-http-client"] }

[features]
dev = ["dep:frankenstein"]