[package]
name = "read4me"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["tracing"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
prost = "0.11.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
sea-query = { version = "0.30.1", default-features = false, features = ["derive", "backend-sqlite"] }
sea-query-rusqlite = "0.4.0"
reqwest = { version = "0.11.20", features = ["json"] }
tower-http = { version = "0.4.4", features = ["fs"] }
openssl-sys = { version = "0.9.92", features = ["vendored"] }
envy = "0.4.2"
frankenstein = { version = "0.26.0", optional = true, default-features = false, features = ["async-http-client"] }

[build-dependencies]
tonic-build = "0.9.2"

[features]
dev = ["dep:frankenstein"]
