[package]
name = "sub4usd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.29.2"
serde = { version = "1.0.195", features = ["derive"] }
ureq = { version = "2.9.1", features = ["json"] }
