[package]
name = "sub4usd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.31", default-features = false, features=["clock"] }
frankenstein = "0.29.2"
serde = { version = "1.0.195", features = ["derive"] }
ureq = { version = "2.9.1", features = ["json"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
regex = "1.10.2"
